--- a/src/loading-style.css
+++ b/src/loading-style.css
@@ -1,4 +1,7 @@
 .app-loader {
+	  display: flex;
+  	align-items: center;
+  	justify-content: center;
     opacity: 0;
     position: fixed;
     height: 100%;
@@ -19,9 +22,28 @@ app-root:empty + .app-loader {
     z-index: 100;
 }
 app-root:empty + .app-loader .logo {
-    position: fixed;
-    top: 50%;
-    left: 50%;
     width: 20vh;
-    transform: translate(-50%, -50%);
+}
+
+@-webkit-keyframes pulse {
+    0% { -webkit-transform: scale(1); }
+    50% { -webkit-transform: scale(1.1); }
+    100% { -webkit-transform: scale(1); }
+}
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.1); }
+    100% { transform: scale(1); }
+}
+.pulse {
+    -webkit-animation-name: pulse;
+    animation-name: pulse;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    animation-iteration-count: 10;
+		-moz-animation-iteration-count: 10;
+		-webkit-animation-iteration-count: 10;
+		-o-animation-iteration-count: 10;
 }
